--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "zendframework/zend-i18n": "^2.1.6",
         "zendframework/zend-http": "^2.1.6",
         "zendframework/zend-console": "^2.1.6",
-        "ligorl/dompdf": "*"
+        "ligorl/dompdf": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.27",
